--- a/CSS/styleAdd.css
+++ b/CSS/styleAdd.css
@@ -20,6 +20,7 @@ body {
     background: -webkit-linear-gradient(to left, #141e30, #243b55);
     background: linear-gradient(to left, #141e30, #243b55);
     color: #cccccc;
+    margin: auto;
 }
 
 
@@ -33,6 +34,7 @@ header {
     background-color: #141e30;
     width: 100%;
     height: 5rem;
+    font-size: 11px;
 }
 
 header h1 {
@@ -49,7 +51,7 @@ header h1 {
 }
 
 header a {
-    margin-left: 3rem;
+    margin-left: 2rem;
     text-decoration: none;
     color: #e5e5e5;
 }
@@ -67,8 +69,8 @@ header a:hover {
 
 .box {
     margin-top: 30px;
-    width: 51%;
-    height: 100%;
+    width: 380px;
+    height: 105%;
     background: #243b55;
     display: flex;
     flex-direction: column;
@@ -81,7 +83,9 @@ header a:hover {
 
 fieldset {
     border: none;
-    margin-left: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 fieldset h1 {
@@ -177,6 +181,7 @@ select option[value="hide"] {
     margin-top: 35px;
     align-items: center;
     justify-content: center;
+    border-bottom: 20px;
 }
 
 .adiciona {
@@ -229,41 +234,43 @@ select option[value="hide"] {
     color: rgba(179, 0, 0, 0.979);
 }
 
-@media screen and (max-width: 800px) {
+@media (min-width: 900px) {
     .box {
-        width: 70%;
+        width: 800px;
     }
-    .campo {
-        display: flex;
-        flex-direction: column;
+    header {
+        font-size: 16px;
     }
-    
-    .campo select {
-        width: 16.6rem;
-        height: 1.9rem;
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .adiciona {
-        width: 200px;
-    }
-    
-    
-}
-
-@media (min-width: 800px) {
-    .box {
-        width: 55%;
+    header a {
+        margin-left: 3rem;
     }
     fieldset h1 {
         display: flex;
         justify-content: center;
+        align-items: center;
+    }
+    .left {
+        display: flex;
+        flex-direction: column;
+        justify-content: left;
+        align-items: left;
+        position: relative;
+        top: 10%;
+        left: -32%;
+        margin-right: 100px;
+    }
+    .right {
+        display: flex;
+        flex-direction: column;
+        justify-content: right;
+        align-items: right;
+        position: absolute;
+        margin-left: 250px;
+        margin-bottom: 108px;
     }
     .campo {
         display: inline-flex;
         padding: 1.2rem;
-        margin-left: 10px;
         justify-content: center;
         align-items: center;
     }
@@ -284,9 +291,6 @@ select option[value="hide"] {
         justify-content: center;
         align-items: center;
     }
-    .espaco {
-        margin-right: 110px;
-    }
     .cat {
         display: flex;
     }
@@ -300,7 +304,7 @@ select option[value="hide"] {
         width: 400px;
     }
     .adiciona {
-        width: 70%;
+        width: 60%;
     }
     .sucess {
         display: flex;
@@ -325,4 +329,3 @@ select option[value="hide"] {
         color: rgba(179, 0, 0, 0.979);
     }
 }
-
